<resources>
    <string name="app_name">Tp3Grupo7</string>
    <string name="Bienvenido">Bienvenido a parking system</string>
    <string name="inicia_sesion">Inicia sesión para empezar</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="btn_iniciar_sesion">INICIAR SESIÓN</string>
    <string name="registrese">Regístrese</string>
    <string name="iconcar">iconCar</string>
    <string name="parqueos">Parqueos</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="profile">Mi Cuenta</string>
    <string name="ok">OK</string>
    <string name="cancelar">Cancelar</string>
    <string name="navigation_drawler_close">Cerrar Navegacion</string>
    <string name="navigation_drawler_open">Abrir Navegacion</string>
</resources>